[tool.poetry]
name = "loading-programs"
version = "1.0.0"
description = "tool demonstrating Poetry dependency management"
authors = ["ydimitra"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
requests = "^2.31.0"
matplotlib = "^3.7.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

